--- a/nju09/html/blab.css
+++ b/nju09/html/blab.css
@@ -515,3 +515,31 @@ A.linktheme:active {
     padding-left: 45px;
 }
 /******************************end:表单部分****************************/
+/******************************start:特殊字体**************************/
+.warn{
+	color:red
+}
+.c30{color:#cccccc;} 
+.c31{color:#e00000;} 
+.c32{color:#008000;} 
+.c33{color:#808000;} 
+.c34{color:#0000ff;} 
+.c35{color:#d000d0;} 
+.c36{color:#33a0a0;} 
+.c37{color:#333333;} 
+.b40{background-color:#000000;} 
+.b41{background-color:#e00000;} 
+.b42{background-color:#008000;} 
+.b43{background-color:#808000;} 
+.b44{background-color:#0000ff;} 
+.b45{background-color:#d000d0;} 
+.b46{background-color:#33a0a0;} 
+.b47{background-color:#f0f0f0;} 
+.h30{color:#666666;} 
+.h31{color:#ff0000;} 
+.h32{color:#00c957;} 
+.h33{color:#ffd700;} 
+.h34{color:#0000ff;} 
+.h35{color:#ff00ff;} 
+.h36{color:#40e0d0;} 
+.h37{color:#000000;} 
