--- a/nju09/html/showloginpics.css
+++ b/nju09/html/showloginpics.css
@@ -1,4 +1,4 @@
-﻿#container{
+﻿/*#container{
 	position:relative;
 	height:400px;
     width:770px;
@@ -16,3 +16,15 @@
 #container a.show {
 	z-index:500
 }
+*/
+.coin-slider { overflow: hidden; zoom: 1; position: relative; }
+.coin-slider a{ text-decoration: none; outline: none; border: none; }
+
+.cs-buttons { font-size: 0px; padding: 10px; float: left; }
+.cs-buttons a { margin-left: 5px; height: 10px; width: 10px; float: left; border: 1px solid #FF6600; color: #B8C4CF; text-indent: -1000px; }
+.cs-active { background-color: #FF6600; color: #FFF; }
+
+.cs-title { width: 545px; padding: 10px; background-color: #000000; color: #FFFFFF; }
+
+.cs-prev, 
+.cs-next { background-color: #000000; color: #FFFFFF; padding: 0px 10px; }
