版面列表样式调整
变更：
1. 置底去掉hot图标，加上标记样式，加上底纹
2. 增加表格奇偶行背景底纹
3. 大样式（*b.css）字号从 13px 调整为 14px

安装：
1. nju09 先 make proto 再 make update
2. 新的css文件复制到 $HTMPATH/images 下

--- a/nju09/html/images/blas.css
+++ b/nju09/html/images/blas.css
@@ -384,6 +384,15 @@ A.linktheme:active {
 .tdborder {
     border-bottom: 1px solid #333;
 }
+tr.d0 td{
+	background-color: #333;
+}
+.doctop td{
+	background: #333;
+}
+.doctopword{
+	font-weight: bolder;
+}
 /* 表格作者列边框,不支持主题 tduser */
 .tduser {
     color: #fff;
