--- a/nju09/html/images/oras.css
+++ b/nju09/html/images/oras.css
@@ -400,6 +400,15 @@ A.linktheme:active {
 .tdborder {
     border-bottom: 1px solid #efefef;
 }
+tr.d0 td{
+	    background-color: #EFEFEF;
+}
+.doctop td{
+	    background: #EFEFEF;
+}
+.doctopword{
+	    font-weight: bolder;
+}
 /* 表格作者列边框,不支持主题 tduser */
 .tduser {
     color: #333;
