几处版面列表样式的调整
1. 主题模式补充热门话题、版面关键字和相关版面
2. 列表配色依据 liyuchun 建议做了相应调整

--- a/nju09/html/images/gres.css
+++ b/nju09/html/images/gres.css
@@ -33,7 +33,8 @@ BODY,TD,DIV,PRE {
     font-size: 12px!important;
     font-size: 11px;
     font-family: Verdana, "Lucida Grande", Arial, Helvetica, 宋体, sans-serif;
-    color: #555;
+    color: #222;
+	line-height:180%!important;
 }
 BODY {
     margin: 0;
@@ -382,21 +383,24 @@ A.linktheme:active {
 /* 表格题头行辅助线,支持主题 tdtitle */
 .tdtitle {
     color: #690;
-    border-bottom: #111 1px solid;
+    border-bottom: #555 1px solid;
     height: 30px;
 }
 /* 表格内容行辅助线,不支持主题 tdborder */
 .tdborder {
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #555;
 }
 tr.d0 td{
 	background-color: #DDEEDD;
 }
 .doctop td{
 	background: #DDEEDD;
+	font-weight: bolder;
+	border-bottom: 1px solid #555;
+	border-top: 1px solid #555;
 }
 .doctopword{
-	font-weight: bolder;
+	/*font-weight: bolder;*/
 }
 /* 表格作者列边框,不支持主题 tduser */
 .tduser {
