--- a/nju09/html/images/blab.css
+++ b/nju09/html/images/blab.css
@@ -33,7 +33,8 @@ BODY,TD,DIV,PRE {
     font-size: 14px!important;
     font-size: 14px;
     font-family: Verdana, "Lucida Grande", Arial, Helvetica, 宋体, sans-serif;
-    color: #fff;
+    color: #CCC;
+    line-height:180%!important;
 }
 BODY {
     margin: 0;
@@ -377,21 +378,25 @@ A.linktheme:active {
 /* 表格题头行辅助线,支持主题 tdtitle */
 .tdtitle {
     color: #fff;
-    border-bottom: #333 1px solid;
+    border-bottom: #666 1px solid;
     height: 30px;
 }
 /* 表格内容行辅助线,不支持主题 tdborder */
 .tdborder {
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #666;
 }
+
 tr.d0 td{
-		background-color: #333;
+	background-color: #333;
 }
 .doctop td{
-		background: #333;
+    border-top: 1px solid #666;
+    border-bottom: 1px solid #666;
+	background: #333;
+	font-weight: bolder;
 }
 .doctopword{
-		font-weight: bolder;
+	/*	font-weight: bolder;*/
 }
 /* 表格作者列边框,不支持主题 tduser */
 .tduser {
