--- a/nju09/html/images/blus.css
+++ b/nju09/html/images/blus.css
@@ -33,7 +33,8 @@ BODY,TD,DIV,PRE {
     font-size: 12px!important;
     font-size: 11px;
     font-family: Verdana, "Lucida Grande", Arial, Helvetica, 宋体, sans-serif;
-    color: #555;
+    color: #222;
+	line-height:180%!important;
 }
 BODY {
     margin: 0;
@@ -387,16 +388,19 @@ A.linktheme:active {
 }
 /* 表格内容行辅助线,不支持主题 tdborder */
 .tdborder {
-    border-bottom: 1px solid #efefef;
+    border-bottom: 1px solid #555;
 }
 tr.d0 td{
-	    background-color: #EFEFEF;
+	background-color: #EDEDFF;
 }
 .doctop td{
-	    background: #EFEFEF;
+	background: #EDEDFF;
+	border-bottom: 1px solid #555;
+	border-top: 1px solid #555;
+	font-weight: bolder;
 }
 .doctopword{
-	    font-weight: bolder;
+	/*font-weight: bolder;*/
 }
 /* 表格作者列边框,不支持主题 tduser */
 .tduser {
