修复 FF/Safari/Chrome 下发表文章按钮溢出的问题

--- a/nju09/html/images/blub.css
+++ b/nju09/html/images/blub.css
@@ -110,13 +110,12 @@ BODY.left,.level2 {
     border-bottom: #333 1px solid;
     padding: 0;
     display: block;
-    height: 20px;
+    height: 1.7em;
 }
 /* 当前按钮 btncurrent */
 .btncurrent {
-    padding: 2px 5px 0 5px;
-    height: 17px!important;
-    height: 18px;
+    padding: 0px 5px;
+    height: 1.7em!important;
     border: #555 1px solid;
     display: block;
     font-weight: bold;
@@ -133,8 +132,7 @@ A.btnlinkgrey:link,
 A.btnlinkgrey:visited
  {
     padding: 2px 5px 0 5px;
-    height: 17px!important;
-    height: 18px;
+    height: 1.7em!important;
     display: block;
     font-weight: bold;
     font-family: Arial, Verdana, Helvetica, Sans-serif;
@@ -153,8 +151,7 @@ A.btnlinkgrey:active {
 A.btnfunc:link,
 A.btnfunc:visited {
     padding: 2px 5px 0 5px;
-    height: 17px!important;
-    height: 18px;
+    height: 1.7em!important;
     display: block;
     float: left;
     margin: 0 1px 1px 0!important;
@@ -191,14 +188,14 @@ A.btnlinktheme:active {
 /* 提交类按钮:支持主题 btnsubmittheme */
 A.btnsubmittheme:link,
 A.btnsubmittheme:visited {
-    padding: 2px 5px 0 5px;
+    padding: 0px 5px;
     margin: 0 2px 0 0;
     font-weight:bold;
     border: #111 1px solid;
     display: block;
     float: left;
     color: #111;
-    height: 18px;
+    height: 1.7em;
     background-color: #fff;
     text-decoration: none;
 }
